# python-adder

./: .gitignore  Pipfile  setup.cfg
adder/: __init__.py  cli.py  core.py
src/adder/: cli.py
tests/: test_adder_core.py
