[metadata]
name = adder
version = attr: adder.__version__
url = ''
author = ''
author_email = ''

[options]
package_dir =
  = src
packages = find:
setup_requires =
  pytest-runner
tests_require =
  pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  add-main = adder.cli:main

[aliases]
test=pytest
